# wsg50-ros-pkg

wsg_50_common/: CMakeLists.txt  package.xml
wsg_50_driver/: CMakeLists.txt
wsg_50_driver/bash/: open_close.bash
wsg_50_driver/launch/: no_script.launch  script.launch  wsg_50_can.launch  wsg_50_tcp.launch  wsg_50_tcp_script.launch  wsg_50_udp_script.launch
wsg_50_driver/src/: main.cpp
wsg_50_simulation/: CMakeLists.txt
