<?xml version="1.0"?>
<package format="2">
  <name>wsg_50_common</name>
  <version>0.0.0</version>
  <description>The wsg_50_common package</description>

  <maintainer email="nalt@todo.todo">nalt</maintainer>

  <license>BSD</license>

  <author >Nicolas Alt</author>
  <author >Robotnik</author>
  <author >Weiss Robotics</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>
  </export>
</package>